test/expected/explain_nrfi_v-c++-error.out
explain noreturn void f(int)
        ^
9: error: "noreturn": unknown name; did you mean "co_return" or "return"?
